--- a/mobilize.conf
+++ b/mobilize.conf
@@ -9,6 +9,6 @@
 # Proxy everything except for /surveytool and /maanger to mtest
 SSLProxyEngine on
 ProxyPass /app https://test.mobilizingcs.org/app
-ProxyPassMatch ^/(?!(surveytool|manager)).*$ https://test.mobilizingcs.org/
+ProxyPassMatch ^/navbar/(?!(campaign_mgmt|responsetool|surveytool|manager)).*$ https://test.mobilizingcs.org/
 ProxyPassReverse / http://test.mobilizingcs.org/
 ProxyPassReverse / https://test.mobilizingcs.org/
