fix link to plotapp

--- a/mobilize.conf
+++ b/mobilize.conf
@@ -9,6 +9,7 @@
 # Proxy everything except for /surveytool and /maanger to mtest
 SSLProxyEngine on
 ProxyPass /app https://test.mobilizingcs.org/app
+ProxyPass /ocpu https://test.mobilizingcs.org/ocpu
 ProxyPassMatch ^/navbar/(?!(campaign_mgmt|responsetool|surveytool|manager)).*$ https://test.mobilizingcs.org/
 ProxyPassReverse / http://test.mobilizingcs.org/
 ProxyPassReverse / https://test.mobilizingcs.org/
