--- a/mobilize.conf
+++ b/mobilize.conf
@@ -10,6 +10,6 @@
 SSLProxyEngine on
 ProxyPass /app https://test.mobilizingcs.org/app
 ProxyPass /ocpu https://test.mobilizingcs.org/ocpu
-ProxyPassMatch ^/navbar/(?!(campaign_mgmt|responsetool|surveytool|manager)).*$ https://test.mobilizingcs.org/
+ProxyPassMatch ^/navbar/(?!(teacher|campaign_mgmt|responsetool|surveytool|manager)).*$ https://test.mobilizingcs.org/
 ProxyPassReverse / http://test.mobilizingcs.org/
 ProxyPassReverse / https://test.mobilizingcs.org/
